--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -8,11 +8,31 @@
 </ion-header>
 
 <ion-content padding>
-  <h3>Ionic Menu Starter</h3>
 
-  <p>
-    If you get lost, the <a href="http://ionicframework.com/docs/v2">docs</a> will show you the way.
-  </p>
+  <img src="assets/imgs/logo-presto.png" alt="logo">
 
-  <button ion-button secondary menuToggle>Toggle Menu</button>
+  <ion-item>
+    <ion-input placeholder="Digite seu e-mail"></ion-input>
+  </ion-item>
+
+  <ion-item>
+    <ion-input placeholder="Digite sua senha"></ion-input>
+  </ion-item>
+
+  <button ion-button block>
+    <ion-icon slot="start" name="star"></ion-icon>
+    Login com Google
+  </button>
+  <button ion-button block>
+    <ion-icon slot="start" name="star"></ion-icon>
+    Login com Facebook
+  </button>
+  <button ion-button block>Log in</button>
+
+  <button ion-button clear block small>Esqueci minha senha</button>
+
+  <button ion-button clear block small>Cadastre-se</button>
+
+  <button ion-button clear block small>Log in com QR Code ou código da mesa</button>
+
 </ion-content>
