Atualização visual da tela inicial, e adição de imagens para uso no projeto

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -7,32 +7,32 @@
   </ion-navbar>
 </ion-header>
 
-<ion-content padding>
+<ion-content padding class="bg-image">
 
-  <img src="assets/imgs/logo-presto.png" alt="logo">
+  <img src="assets/imgs/logo-presto.png" alt="logo" class="logoPresto">
 
-  <ion-item>
+  <ion-item class="inputApp">
     <ion-input placeholder="Digite seu e-mail"></ion-input>
   </ion-item>
 
-  <ion-item>
+  <ion-item class="inputApp">
     <ion-input placeholder="Digite sua senha"></ion-input>
   </ion-item>
 
-  <button ion-button block>
-    <ion-icon slot="start" name="star"></ion-icon>
+  <button ion-button class="buttonGoogle">
+    <img src="assets/imgs/icons/google-icon.png" alt="logo" class="iconButton">
     Login com Google
   </button>
-  <button ion-button block>
-    <ion-icon slot="start" name="star"></ion-icon>
+  <button ion-button class="buttonFacebook">
+    <img src="assets/imgs/icons/facebook-icon-1.png" alt="logo" class="iconButton">
     Login com Facebook
   </button>
-  <button ion-button block>Log in</button>
+  <button ion-button class="buttonApp">Log in</button>
 
-  <button ion-button clear block small>Esqueci minha senha</button>
+  <button ion-button clear block small class="linkApp">Esqueci minha senha</button>
 
-  <button ion-button clear block small>Cadastre-se</button>
+  <button ion-button clear block small small class="linkApp">Cadastre-se</button>
 
-  <button ion-button clear block small>Log in com QR Code ou código da mesa</button>
+  <button ion-button clear block small small class="linkApp">Log in com QR Code ou código da mesa</button>
 
 </ion-content>
