Criação das telas Login e Home, e inicio da parte visual da aplicação.

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -3,36 +3,21 @@
     <button ion-button menuToggle>
       <ion-icon name="menu"></ion-icon>
     </button>
-    <ion-title>Home</ion-title>
+    <ion-title>Presto</ion-title>
+    <!-- <ion-icon name="more"></ion-icon> -->
   </ion-navbar>
 </ion-header>
 
 <ion-content padding class="bg-image">
 
-  <img src="assets/imgs/logo-presto.png" alt="logo" class="logoPresto">
+  <button ion-button class="buttonAppHome" margin-top="100px">Iniciar o Atendimento</button>
 
-  <ion-item class="inputApp">
-    <ion-input placeholder="Digite seu e-mail"></ion-input>
-  </ion-item>
-
-  <ion-item class="inputApp">
-    <ion-input placeholder="Digite sua senha"></ion-input>
-  </ion-item>
-
-  <button ion-button class="buttonGoogle">
-    <img src="assets/imgs/icons/google-icon.png" alt="logo" class="iconButton">
-    Login com Google
-  </button>
-  <button ion-button class="buttonFacebook">
-    <img src="assets/imgs/icons/facebook-icon-1.png" alt="logo" class="iconButton">
-    Login com Facebook
-  </button>
-  <button ion-button class="buttonApp">Log in</button>
-
-  <button ion-button clear block small class="linkApp">Esqueci minha senha</button>
-
-  <button ion-button clear block small small class="linkApp">Cadastre-se</button>
-
-  <button ion-button clear block small small class="linkApp">Log in com QR Code ou código da mesa</button>
+  <button ion-button class="buttonAppHome">Perfil</button>
 
 </ion-content>
+
+<ion-footer>
+  <ion-toolbar>
+    <ion-icon name="body"></ion-icon>
+  </ion-toolbar>
+</ion-footer>
