Criação da página Register

--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -31,7 +31,7 @@
 
   <button ion-button clear block small class="linkApp">Esqueci minha senha</button>
 
-  <button ion-button clear block small small class="linkApp">Cadastre-se</button>
+  <button ion-button clear block small small class="linkApp" (click)="register()">Cadastre-se</button>
 
   <button ion-button clear block small small class="linkApp">Log in com QR Code ou código da mesa</button>
 
