Criação da página Código da mesa e da página QR Code

--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -33,6 +33,6 @@
 
   <button ion-button clear block small small class="linkApp" (click)="register()">Cadastre-se</button>
 
-  <button ion-button clear block small small class="linkApp">Log in com QR Code ou código da mesa</button>
+  <button ion-button clear block small small class="linkApp" (click)="loginCodMesa()">Log in com QR Code ou código da mesa</button>
 
 </ion-content>
