Pequenas atualizações da parte visual das páginas

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,5 +1,5 @@
 <ion-header>
-  <ion-navbar>
+  <ion-navbar color="presto-primary">
     <button ion-button menuToggle>
       <ion-icon name="menu"></ion-icon>
     </button>
@@ -10,14 +10,17 @@
 
 <ion-content padding class="bg-image">
 
-  <button ion-button class="buttonAppHome" margin-top="100px">Iniciar o Atendimento</button>
+  <button ion-button class="buttonAppHome">Iniciar o Atendimento</button>
 
   <button ion-button class="buttonAppHome">Perfil</button>
 
 </ion-content>
 
 <ion-footer>
-  <ion-toolbar>
-    <ion-icon name="body"></ion-icon>
+  <ion-toolbar color="presto-primary">
+    <img src="assets/imgs/icons/waiter.png" alt="logo" class="footer-icon" height="25px">
+    <img src="assets/imgs/icons/accounting.png" alt="logo" class="footer-icon-conta" height="25px">
+    <!-- <ion-icon class="footer-icon" name="body"></ion-icon> -->
+    <!-- <ion-icon class="footer-icon-conta" name="document"></ion-icon> -->
   </ion-toolbar>
 </ion-footer>
