--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -1,9 +1,9 @@
 <ion-header>
-  <ion-navbar>
+  <ion-navbar color="presto-primary">
     <button ion-button menuToggle>
       <ion-icon name="menu"></ion-icon>
     </button>
-    <ion-title>Login</ion-title>
+    <img src="assets/imgs/presto-title.png" alt="logo" class="titlePresto">
   </ion-navbar>
 </ion-header>
 
@@ -12,7 +12,7 @@
   <img src="assets/imgs/logo-presto.png" alt="logo" class="logoPresto">
 
   <ion-item class="inputApp">
-    <ion-input color danger placeholder="Digite seu e-mail"></ion-input>
+    <ion-input placeholder="Digite seu e-mail"></ion-input>
   </ion-item>
 
   <ion-item class="inputApp">
