--- a/src/pages/register/register.html
+++ b/src/pages/register/register.html
@@ -1,5 +1,5 @@
 <ion-header>
-  <ion-navbar>
+  <ion-navbar color="presto-primary">
     <button ion-button menuToggle>
       <ion-icon name="menu"></ion-icon>
     </button>
@@ -11,7 +11,7 @@
 
   <ion-label stacked class="title">Nome</ion-label>
   <ion-item class="inputApp">
-    <ion-input color danger placeholder="Digite seu nome"></ion-input>
+    <ion-input color="presto-primary" placeholder="Digite seu nome"></ion-input>
   </ion-item>
 
   <ion-label stacked class="title">E-mail</ion-label>
@@ -37,3 +37,10 @@
   <button ion-button class="buttonAppHome">Cadastrar</button>
 
 </ion-content>
+
+<ion-footer>
+  <ion-toolbar color="presto-primary">
+    <img src="assets/imgs/icons/waiter.png" alt="logo" class="footer-icon" height="25px">
+    <img src="assets/imgs/icons/accounting.png" alt="logo" class="footer-icon-conta" height="25px">
+  </ion-toolbar>
+</ion-footer>
