--- a/src/pages/login-qrcode/login-qrcode.html
+++ b/src/pages/login-qrcode/login-qrcode.html
@@ -1,5 +1,5 @@
 <ion-header>
-  <ion-navbar>
+  <ion-navbar color="presto-primary">
     <button ion-button menuToggle>
       <ion-icon name="menu"></ion-icon>
     </button>
@@ -18,7 +18,8 @@
 </ion-content>
 
 <ion-footer>
-  <ion-toolbar>
-    <ion-icon name="body"></ion-icon>
+  <ion-toolbar color="presto-primary">
+    <img src="assets/imgs/icons/waiter.png" alt="logo" class="footer-icon" height="25px">
+    <img src="assets/imgs/icons/accounting.png" alt="logo" class="footer-icon-conta" height="25px">
   </ion-toolbar>
 </ion-footer>
