Criação das páginas: change-password, menu-types, drinks-menu, pizzas-menu, requests.

--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -29,7 +29,7 @@
   </button>
   <button ion-button class="buttonApp" (click)="login()">Log in</button>
 
-  <button ion-button clear block small class="linkApp">Esqueci minha senha</button>
+  <button ion-button clear block small class="linkApp" (click)="changePassword()">Esqueci minha senha</button>
 
   <button ion-button clear block small small class="linkApp" (click)="register()">Cadastre-se</button>
 
