--- a/src/pages/menu-types/menu-types.html
+++ b/src/pages/menu-types/menu-types.html
@@ -10,17 +10,15 @@
 
 <ion-content padding class="bg-image">
 
-  <button ion-button class="buttonAppHome" (click)="startService()">Iniciar o Atendimento</button>
+  <button ion-button class="buttonAppHome" (click)="drinksMenu()">Bebidas</button>
 
-  <button ion-button class="buttonAppHome" (click)="profile()">Perfil</button>
+  <button ion-button class="buttonAppHome" (click)="pizzasMenu()">Pizzas</button>
 
 </ion-content>
 
 <ion-footer>
   <ion-toolbar color="presto-primary">
     <img src="assets/imgs/icons/waiter.png" alt="logo" class="footer-icon" height="25px">
-    <img src="assets/imgs/icons/accounting.png" alt="logo" class="footer-icon-conta" height="25px" (click)="requests()">
-    <!-- <ion-icon class="footer-icon" name="body"></ion-icon> -->
-    <!-- <ion-icon class="footer-icon-conta" name="document"></ion-icon> -->
+    <img src="assets/imgs/icons/accounting.png" alt="logo" class="footer-icon-conta" height="25px">
   </ion-toolbar>
 </ion-footer>
